--- a/CSS/Study/选择器/基本选择器/基本选择器.HTML
+++ b/CSS/Study/选择器/基本选择器/基本选择器.HTML
@@ -2,8 +2,8 @@
  * @Author: Weidows
  * @Date: 2020-08-11 09:16:30
  * @LastEditors: Weidows
- * @LastEditTime: 2020-11-13 12:03:08
- * @FilePath: \Weidows\CSS\Study\选择器\选择器.HTML
+ * @LastEditTime: 2020-11-15 23:52:26
+ * @FilePath: \Weidows\CSS\Study\选择器\基本选择器\基本选择器.HTML
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -15,13 +15,13 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="CSS/1.css" /> -->
+    <!-- <link rel="stylesheet" href="../CSS/基本选择器.css" /> -->
     <style>
       /*
       这里是CSS代码,注释样式不一样
       下面是导入式引入css样式
       */
-      @import url("CSS/1.css");
+      @import url("./基本选择器.css");
     </style>
   </head>
   <body>
@@ -48,6 +48,6 @@
       !行内样式
       * 非建议式写法
      -->
-    <h1 style="color:aqua">行内样式</h1>
+    <h1 style="color: aqua;">行内样式</h1>
   </body>
 </html>
