--- a/Web/选择器/4.属性选择器/1.HTML
+++ b/Web/选择器/4.属性选择器/1.HTML
@@ -2,8 +2,8 @@
  * @Author: Weidows
  * @Date: 2020-11-16 18:39:23
  * @LastEditors: Weidows
- * @LastEditTime: 2020-11-17 00:19:53
- * @FilePath: \Weidows\CSS\Study\选择器\属性选择器\1.HTML
+ * @LastEditTime: 2020-11-17 22:08:50
+ * @FilePath: \Weidows\Web\选择器\属性选择器\1.HTML
  * @Description:
 -->
 <!DOCTYPE html>
