--- a/Web/标签/下.HTML
+++ b/Web/标签/下.HTML
@@ -2,8 +2,8 @@
  * @Author: Weidows
  * @Date: 2020-08-07 16:07:42
  * @LastEditors: Weidows
- * @LastEditTime: 2020-08-10 23:03:09
- * @FilePath: \Weidows\HTML\20-8\标签\下.HTML
+ * @LastEditTime: 2020-11-22 22:08:05
+ * @FilePath: \Weidows\Web\标签\下.HTML
 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -21,9 +21,7 @@
     <!-- !表单标签 -->
     <!-- ?表单域 -->
     <h1>44-表单域</h1>
-    <form action="demo.php" method="POST" name="form1">
-      这是空表单
-    </form>
+    <form action="demo.php" method="POST" name="form1">这是空表单</form>
 
     <!-- ?表单元素
     给一系列表单元素加上相同的name可进行组合(同标签间识别)
@@ -91,9 +89,9 @@
     <select>
       <!-- 至少包含一对option -->
       <option>山东</option>
-      <option selected="selected">河北</option
-      ><!-- 默认选中状态 -->
-      <option>天津</option> </select
+      <option selected="selected">河北</option>
+      <!-- 默认选中状态 -->
+      <option>天津</option></select
     ><br />
 
     <!-- /文本域标签(大号文本框,留言板/评论) -->
