🚨 Change image source.

--- a/Web/Test.HTML
+++ b/Web/Test.HTML
@@ -1,8 +1,15 @@
 <!--
  * @Author: Weidows
- * @Date: 2020-11-22 23:07:44
+ * @Date: 2020-11-29 14:19:07
  * @LastEditors: Weidows
- * @LastEditTime: 2020-11-22 23:27:44
+ * @LastEditTime: 2020-11-30 21:05:24
  * @FilePath: \Weidows\Web\Test.HTML
  * @Description:
 -->
+<a href="#">
+  <img align="right" alt="Flexiston's Github Stats" src="https://github-readme-stats.vercel.app/api?username=Flexiston&show_icons=true&title_color=2196f3&icon_color=2196f3&text_color=4c4948&bg_color=ffffff">
+</a>
+
+<a href="https://github.com/Flexiston?tab=followers">
+  <img alt="Github Followers" src="https://img.shields.io/badge/dynamic/json?logo=github&label=GitHub%20Followers&labelColor=282c34&color=181717&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dgithub%26queryKey%3DFlexiston&style=flat-square">
+</a>
